--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         nama_pemilik: document.getElementById('input-nama_pemilik').value.trim(),
         atm: document.getElementById('input-atm').value,
         kategori: document.getElementById('input-kategori').value,
-        produk: checkedKomoditas.join(', ')
+        produk: checkedKomoditas.join(', '),
          // ✅ TIMESTAMP
     timestamp: new Date().toISOString()
     };
@@ -412,7 +412,3 @@
     </script>
 </body>
 </html>
-
-
-
-
