Change status from 'Pending' to 'Disetujui'

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
                     <div class="flex justify-between">
                         <span class="text-gray-500">Status</span>
-                        <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-yellow-100 text-yellow-800">Pending</span>
+                        <span class="inline-flex items-center px-2 py-0.5 rounded text-xs font-medium bg-yellow-100 text-yellow-800">Disetujui</span>
                     </div>
                 </div>
 
