Move toast container to center of the screen

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
         }
     </script>
 
-    <!-- TOAST CONTAINER -->
-    <div id="toast-container" class="fixed top-4 right-4 z-[60] flex flex-col gap-2"></div>
+    <!-- TOAST CONTAINER (CENTER SCREEN) -->
+<div 
+  id="toast-container"
+  class="fixed inset-0 z-[60] flex items-center justify-center pointer-events-none">
+</div>
 
     <!-- NAVBAR -->
     <nav class="bg-white border-b border-gray-200 sticky top-0 z-50">
