--- a/Aplikasi PPB/index.html
+++ b/Aplikasi PPB/index.html
@@ -41,6 +41,20 @@
             background-color: #fef2f2 !important;
             box-shadow: 0 0 0 2px rgba(239, 68, 68, 0.2) !important;
         }
+    .fade-in {
+      animation: fadeInScale 0.25s ease-out;
+    }
+
+    @keyframes fadeInScale {
+      from {
+        opacity: 0;
+        transform: scale(0.92);
+      }
+      to {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
     </style>
 </head>
 <body class="min-h-screen bg-slate-50 font-sans text-gray-800">
@@ -472,6 +486,7 @@
 
 </body>
 </html>
+
 
 
 
