--- a/Aplikasi PPB/index.html
+++ b/Aplikasi PPB/index.html
@@ -98,7 +98,7 @@
 
     <!-- KONFIGURASI -->
     <script>
-        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwLc0oNOX7YrXG0Nc1L7RDg_j9e_KMZ87sADg8jEN_aIfqaJY3fm2NJGZWhFzb-yVUVlQ/exec";
+        const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxlcaiHF9aGye_pcKMoN0DlsYG6CoTXp_BEgbuAzg7nM9GOUM7jjE47_LrxgIbvYuUSdw/exec";
         
         // Database lokal sederhana untuk simulasi pengecekan duplikat Kartu Keluarga
 
@@ -460,7 +460,8 @@
 
     // ✅ DATA YANG MASUK KE QR CODE
     const verifikasiURL =
-        `https://rptra.vercel.app/verifikasi.html?id=${registeredData.id}`;
+        window.location.href.replace('index.html', '') +
+        `verifikasi.html?id=${registeredData.id}`;
 
     // ✅ Generate QR
     document.getElementById('qr-image').src =
