--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     // ✅ Tampilkan ke halaman review
     document.getElementById('review-waktu').textContent = waktuWIB;
     document.getElementById('review-id').textContent = registeredData.id;
-    document.getElementById('review-kk').textContent = registeredData.kk;
+    document.getElementById('review-kk').textContent = maskedKK;
     document.getElementById('review-nama_pemilik').textContent = registeredData.nama_pemilik;
     document.getElementById('review-produk').textContent = registeredData.produk;
 
