--- a/index.html
+++ b/index.html
@@ -451,9 +451,13 @@
 
     try {
         const res = await fetch(GOOGLE_SCRIPT_URL, {
-            method: 'POST',
-            body: JSON.stringify(payload)
-        });
+    method: 'POST',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(payload)
+});
+
 
         const result = await res.json();
         loader.classList.remove('active'); // Matikan loading
