--- a/index.html
+++ b/index.html
@@ -184,23 +184,23 @@
                             <label class="block text-sm font-medium text-gray-700 mb-2">Jenis Komoditas :</label>
                             <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 bg-gray-50 p-4 rounded-xl border border-gray-200">
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Ayam - 1 ekor" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Ayam" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Ayam - 1 ekor</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Daging Sapi - 1 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Daging Sapi" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Daging Sapi - 1 kg</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Telur - 1 tray" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Telur" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Telur - 1 tray</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Beras - 5 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Beras" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Beras - 5 kg</span>
                                 </label>
                                 <label class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
-                                    <input type="checkbox" name="komoditas" value="Ikan Kembung - 1 kg" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
+                                    <input type="checkbox" name="komoditas" value="Ikan Kembung" class="w-5 h-5 text-blue-600 rounded focus:ring-blue-500">
                                     <span class="text-sm text-gray-700">Ikan Kembung - 1 kg</span>
                                 </label>
                                 <label id="container-susu" class="flex items-center space-x-3 p-2 bg-white rounded-lg border border-gray-100 shadow-sm cursor-pointer hover:border-blue-300 transition">
