--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <label class="block text-sm font-medium text-gray-700 mb-1">No. Kartu Keluarga (16 Digit)</label>
                         <input type="text" name="kk" id="input-kk" maxlength="16" required
                             class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                            placeholder="317...">
+                            placeholder="Masukkan No. KK Anda">
                         <p id="error-kk" class="hidden text-red-600 text-xs mt-1 font-medium">No. Kartu Keluarga sudah ada</p>
                     </div>
 
@@ -145,7 +145,7 @@
                             <label class="block text-sm font-medium text-gray-700 mb-1">No. KTP (16 Digit)</label>
                             <input type="text" name="ktp" id="input-ktp" maxlength="16" required
                                 class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                                placeholder="0000...">
+                                placeholder="Masukkan No. KTP Anda">
                         </div>
                     </div>
 
@@ -161,7 +161,7 @@
                             <label class="block text-sm font-medium text-gray-700 mb-1">No. Kartu ATM (16 Digit)</label>
                             <input type="text" name="atm" id="input-atm" maxlength="16" required
                                 class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 transition font-mono"
-                                placeholder="0000...">
+                                placeholder="Masukkan No. Kartu ATM Anda">
                         </div>
                     </div>
 
