--- a/Aplikasi PPB/verifikasi.html
+++ b/Aplikasi PPB/verifikasi.html
@@ -28,7 +28,8 @@ const id = params.get('id');
 if (!id) {
   document.getElementById('status').textContent = 'ID tidak ditemukan';
 } else {
-  fetch(`https://script.google.com/macros/s/AKfycbyscVGO1ix4MfUJ72Xsxxk8gOnpxH4QKbKFSRFJ01Al5Y12fHXlXaaDGiGU4W-vkcMp2g/exec?id=${id}`)
+  const API_URL = "https://script.google.com/macros/s/AKfycbzjcm7YLLgryl_rr7bEaydQQr7qTNk-H5UDbJKAwx2q2yfxKWwIIWEx0RVi1f2qQV8h/exec";
+  fetch(`${API_URL}?id=${encodeURIComponent(id)}`)
     .then(res => res.json())
     .then(data => {
       if (!data.success) {
